# distributed_computation

./: .gitignore  README.md  pyproject.toml  upgrade_ubuntu_python.sh
dask/: README.md  tmp.md  upgrade_ubuntu_python.sh
dask/master/: hosts.txt  requirements.txt  run_master.py  start_scheduler.ps1
dask/master/worker/: ping_task.py
dask/worker/: requirements.txt  start_worker.sh
dask_version/: upgrade_ubuntu_python.sh
dask_version/master/: run_master.py
dask_version/worker/: ping_task.py
legacy/workbench/: count.py  db.py  ping.py  vacumm.py
legacy/workbench/dask_version/master/: db_writer.py  requirements.txt
src/distributed_computation/common/: logging_config.py  ping.py
src/distributed_computation/master/: db_class.py  db_writer.py  run_master.py
src/distributed_computation/worker/: tasks.py
workbench/: requirements.txt  string_generator.py
