[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-computation"
version = "0.1.0"
dependencies = [
    "dask[distributed]==2025.11.0",
    "bokeh==3.8.1",
    "jupyter_server_proxy==4.4.0",
    "requests==2.32.5"
]

[tool.setuptools.packages.find]
where = ["src"]
